bug fixes as well as

--- a/src/Makefile
+++ b/src/Makefile
@@ -26,7 +26,10 @@ stest: $(SDEMO1) $(SDEMO2) $(SDEMO3) $(SDEMO4)
 test: $(PROG)
 	./p2exe <test_files/errors_in.txt >test_output/errors_out
 	diff test_output/errors_out test_output/errors_out.txt
+	./p2exe <test_files/typeahead_in.txt >test_output/typeahead_out
+	diff test_output/typeahead_out test_output/typeahead_out.txt
 	./p2exe <test_files/normal_in.txt >test_output/normal_out
+	diff test_output/savefile1.txt  savefile1.txt
 	diff test_output/normal_out test_output/normal_out.txt
 
 $(SDEMO1): String_demo1.o String.o Utility.o
